--- a/docs/wearables/sdks/authentication.mdx
+++ b/docs/wearables/sdks/authentication.mdx
@@ -136,13 +136,67 @@ Use [Vital Sign-In Token](#vital-sign-in-tokens) whenever possible.
 </Warning>
 
 Vital Mobile SDK can be configured to authenticate using API Key alongside a target user ID.
-Please refer to the specific SDK guide:
 
-* [iOS SDK](/wearables/sdks/ios#3-initial-setup)
-* [Android SDK](/wearables/sdks/android#1-vitalclient)
-* [Flutter SDK](/wearables/sdks/flutter#2-vital-core)
-* [React Native SDK](/wearables/sdks/react_native#4-configure-your-dependencies)
+<CodeGroup>
+  ```swift Native iOS
+  import VitalCore
 
+  VitalClient.configure(
+    apiKey: "sk_us_...",
+    environment: .sandbox(.us)
+  )
+  VitalClient.setUserId(UUID(uuidString: "ccd6f98d-3a2a-433b-a114-8fe064f301ed")!)
+  ```
+
+  ```kotlin Native Android
+  import io.tryvital.client.VitalClient
+  import android.content.Context
+
+  val applicationContext: Context
+
+  VitalClient.configure(
+    applicationContext,
+    Region.US,
+    Environment.Sandbox,
+    "sk_us_..."
+  )
+  VitalClient.setUserId(applicationContext, "ccd6f98d-3a2a-433b-a114-8fe064f301ed")
+  ```
+
+  ```typescript React Native
+  import { VitalCore } from "@tryvital/vital-core-react-native";
+
+  await VitalCore.configure(
+      "sk_us_...",
+      "sandbox",
+      "us",
+      true,
+  );
+  await VitalCore.setUserId("ccd6f98d-3a2a-433b-a114-8fe064f301ed");
+  ```
+
+  ```dart Flutter
+  import 'package:vital_core/vital_core.dart' as vital_core;
+
+  await vital_core.configure(
+    "sk_us_...",
+    vital_core.Environment.sandbox,
+    vital_core.Region.us
+  );
+  await vital_core.setUserId("ccd6f98d-3a2a-433b-a114-8fe064f301ed");
+  ```
+</CodeGroup>
+
+<br />
+
+<Info>
+When running on iOS, the SDK must be **explicitly** configured before other SDK methods can be invoked.
+
+Alternatively, follow the [Apple HealthKit guide](https://docs.tryvital.io/wearables/guides/apple_health_kit#2-integrate-with-ios-system-callbacks)
+to enable SDK Automatic Configuration during app launch. This auto-configures the SDK using the last known configuration you supplied — including but
+not limited to the API Key, the environment and the target User ID. Not only is this a prerequisite to enable HealthKit Background Delivery, this
+allows you also to only call `configure(...)` and `setUserId(...)` once to "sign-in" the user persistently when using the Vital API Key scheme.
+</Info>
 
 ## Migrate from Vital API Keys to Vital Sign-In Tokens
 
