[VIT-5598] Whoop V2 docs

--- a/docs/wearables/connecting-providers/bring_your_own_oauth.mdx
+++ b/docs/wearables/connecting-providers/bring_your_own_oauth.mdx
@@ -48,5 +48,4 @@ to the provider for an OAuth application, and provide Vital your assigned creden
 | [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Vital branded OAuth, or BYOO |
 | [Withings](https://www.withings.com)                 | `withings`        | Vital branded OAuth, or BYOO |
 | [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | BYOO only [(Guide)](/wearables/guides/dexcom_v3) |
-| [Huawei](https://www.huawei.com)                     | `huawei`          | BYOO only                    |
-| [iHealth](https://www.ihealth.com)                   | `ihealth`         | BYOO only                    |
+| [Whoop](https://www.whoop.com)                       | `whoop_v2`        | BYOO only                    |
