--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -34,7 +34,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                | Password authentication                                                              |
 | [Strava](https://www.strava.com)                     | `strava`          | Running & Cycling Social Network                              | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Cycling Equipment                                             | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
-| [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                | Password authentication                                                              |
+| [Whoop](https://www.whoop.com)                       | `whoop_v2`        | Your Personal Digital Fitness and Health Coach                | [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only                    |
 | [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   | Password authentication                                                              |
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           | Finnish sports tech pioneer                                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
@@ -110,7 +110,7 @@ Cloud Based Providers can be divided in two main categories:
 | [Oura](https://ouraring.com)                                    | Polling     |
 | [Peloton](https://www.onepeloton.com)                           | Polling     |
 | [Renpho](https://renpho.com)                                    | Polling     |
-| [Whoop](https://www.whoop.com)                                  | Polling     |
+| [Whoop](https://www.whoop.com)                                  | Push        |
 | [Zwift](https://zwift.com)                                      | Polling     |
 | [8Sleep](https://www.eightsleep.com)                            | Polling     |
 | [Hammerhead](https://www.hammerhead.io)                         | Polling     |
