--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -4,5 +4,19 @@ title: "Whoop"
 
 ## Connecting Whoop to Vital
 
-Whoop is a BYOO only provider, so you will need to register your app at [Whoop](https://developer-dashboard.whoop.com/) and follow the guide
-for [setting up bring your own oauth](/wearables/connecting-providers/bring_your_own_oauth) to get started.
+Whoop is a BYOO only provider, so you will need your own app in [Whoop's developer dashboard](https://developer-dashboard.whoop.com/).
+
+To set this up you will need to provide us with the following information:
+
+1. Name of the Company:
+    * Provide the official name of your company.
+2. Desired Name for Sandbox and Prod Applications:
+    * Specify names for your sandbox and production applications.
+3. Projected Number of Users:
+    * Estimate the number of users utilizing the WHOOP API.
+4. Intended Use of the WHOOP API:
+    * Briefly outline the use case for your product (e.g. who are your users, what benefits will they derive from the integration, etc )
+5. Preferred Timeline for Integration Release:
+    * Indicate your preferred timeline for releasing the integration to your users.
+
+You can share this information via Slack or by emailing Support@tryvital.io.
