--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -4,7 +4,7 @@ title: "Whoop"
 
 ## Connecting Whoop to Vital
 
-Whoop is a BYOO only provider, so you will need your own app in [Whoop's developer dashboard](https://developer-dashboard.whoop.com/).
+Whoop is a [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only provider, so you will need your own app in [Whoop's developer dashboard](https://developer-dashboard.whoop.com/).
 
 To set this up you will need to provide us with the following information:
 
