Fix loom embed in webhooks deep dive

--- a/docs/webhooks/introduction.mdx
+++ b/docs/webhooks/introduction.mdx
@@ -83,27 +83,25 @@ Once a connection between a provider and a user is established, we will send a w
 
 ## Deep Dive into Vital Webhooks
 
-<Example resizeable>
-  <div
+<div
+  style={{
+    position: "relative",
+    paddingBottom: "56.872037914691944%",
+    height: 0
+  }}
+>
+  <iframe
+    src="https://www.loom.com/embed/0121d272e21b44049dd4d418302580a5?sid=0dc174e1-20e6-4fd9-9824-0fc2d5eaf95f"
+    frameBorder={0}
+    webkitallowfullscreen=""
+    mozallowfullscreen=""
+    allowFullScreen=""
     style={{
-      position: "relative",
-      paddingBottom: "64.98194945848375%",
-      height: 0,
+      position: "absolute",
+      top: 0,
+      left: 0,
+      width: "100%",
+      height: "100%"
     }}
-  >
-    <iframe
-      src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.loom.com%2Fembed%2F0121d272e21b44049dd4d418302580a5&display_name=Loom&url=https%3A%2F%2Fwww.loom.com%2Fshare%2F0121d272e21b44049dd4d418302580a5&image=https%3A%2F%2Fcdn.loom.com%2Fsessions%2Fthumbnails%2F0121d272e21b44049dd4d418302580a5-00001.gif&key=f2aa6fc3595946d0afc3d76cbbd25dc3&type=text%2Fhtml&schema=loom"
-      frameborder="0"
-      webkitallowfullscreen
-      mozallowfullscreen
-      allowfullscreen
-      style={{
-        position: "absolute",
-        top: 0,
-        left: 0,
-        width: "100%",
-        height: "100%",
-      }}
-    ></iframe>
-  </div>
-</Example>
+  />
+</div>
