remove errant backslash

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -193,7 +193,7 @@ When a new provider is connected to a user, Vital retrieves the historical data 
 | [Dexcom](https://www.dexcom.com)                                             | `30`          |
 | [Dexcom (G6 And Older)](https://www.dexcom.com)                              | `1`           |
 | [MyFitnessPal](https://www.myfitnesspal.com)                                 | `14`          |
-| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)          | `28`\*        |
+| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)          | `28`          |
 | [Cronometer](https://www.cronometer.com)                                     | `28`          |
 
 \* Polar only supports historical backfill for Sleep and Sleep Stream resources.
