--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -39,6 +39,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   | Password authentication                                                              |
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           | Finnish sports tech pioneer                                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Cronometer](https://www.cronometer.com)             | `cronometer`      | Nutrition data                                                | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
+| [Kardia](https://kardia.com/)                        | `kardia`          | Electrocardiogram readings                                    | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 
 ### SDK Based Providers
 
@@ -52,9 +53,9 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Omron](https://www.omron-healthcare.com) (Bluetooth)                  | `omron_ble`           | Blood Pressure monitors and scales                |
 | [Android Health Connect](https://developer.android.com/health-connect) | `health_connect`      | Health and fitness data on Android devices        |
 
-## Providers in Beta
+## Providers under beta
 
-**Beta**: Currently in sandbox. All providers here are available in sandbox and production, any feedback you have is greatly appreciated!
+**Beta**: Providers under beta, these are providers that are recently added. All providers here are available in sandbox and production, any feedback you have is greatly appreciated!
 
 | Provider                                          | Slug    | Description                        |
 | ------------------------------------------------- | ------- | ---------------------------------- |
@@ -193,7 +194,7 @@ When a new provider is connected to a user, Vital retrieves the historical data 
 | [Dexcom](https://www.dexcom.com)                                             | `30`          |
 | [Dexcom (G6 And Older)](https://www.dexcom.com)                              | `1`           |
 | [MyFitnessPal](https://www.myfitnesspal.com)                                 | `14`          |
-| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)          | `28`          |
+| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)          | `28`\*        |
 | [Cronometer](https://www.cronometer.com)                                     | `28`          |
 
 \* Polar only supports historical backfill for Sleep and Sleep Stream resources.
