Kardia password auth

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -39,7 +39,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   | Password authentication                                                              |
 | [Polar](https://www.polar.com/accesslink-api/)       | `polar`           | Finnish sports tech pioneer                                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Cronometer](https://www.cronometer.com)             | `cronometer`      | Nutrition data                                                | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
-| [Kardia](https://kardia.com/)                        | `kardia`          | Electrocardiogram readings                                    | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
+| [Kardia](https://kardia.com/)                        | `kardia`          | Electrocardiogram readings                                    | Password authentication                                                              |
 
 ### SDK Based Providers
 
@@ -55,7 +55,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 ## Providers under beta
 
-**Beta**: Providers under beta, these are providers that are recently added. All providers here are available in sandbox and production, any feedback you have is greatly appreciated!
+**Beta**: Providers under beta, these are providers that have been recently added. All providers here are available in sandbox and production, any feedback you have is greatly appreciated!
 
 | Provider                                          | Slug    | Description                        |
 | ------------------------------------------------- | ------- | ---------------------------------- |
