--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -54,7 +54,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 ## Providers under beta
 
-**Beta**: Providers under beta, these are providers that have been recently added. All providers here are available in sandbox and production, any feedback you have is greatly appreciated!
+**Beta**: Providers under beta, these are providers that have been recently added. All providers here are available in sandbox, any feedback you have is greatly appreciated!
 
 | Provider                                          | Slug     | Description                        |
 | ------------------------------------------------- | -------- | ---------------------------------- |
