--- a/docs/wearables/connecting-providers/custom_widget.mdx
+++ b/docs/wearables/connecting-providers/custom_widget.mdx
@@ -7,9 +7,9 @@ It's worthwhile ensuring that you have read the [Auth Types](/docs/auth-types) d
 
 An overview of the process is as follows:
 
-1. Get a list of all available providers "/v2/providers"
+1. Get a list of all available providers ["/v2/providers"](/docs/api-reference/providers)
 2. Build your UI using this list of providers
-3. On select of a provider, generate a link token for that provider "/v2/link/token"
+3. When selecting a provider, generate a link token for that provider ["/v2/link/token"](/docs/api-reference/link/generate-link-token)
 4. Use the link token to generate an oauth link, or authorize an email, or email and password.
 
 ## 1. List of all available providers
