--- a/docs/event-catalog/labtest.order.updated.mdx
+++ b/docs/event-catalog/labtest.order.updated.mdx
@@ -283,6 +283,9 @@ Shipping Details. For unregistered testkit orders.
 </ResponseField>
 </Expandable>
 </ResponseField>
+<ResponseField name="activate_by" type="string | null">
+Defines when an Order should be activated, making it a Delayed Order.
+</ResponseField>
 </Expandable>
 </ResponseField>
 # Examples
@@ -291,9 +294,9 @@ Shipping Details. For unregistered testkit orders.
 {
   "event_type": "labtest.order.updated",
   "data": {
-    "id": "0a70d60f-6986-4f6b-9374-727c4864fb26",
-    "team_id": "415b63bf-231d-4a66-8d7f-f7d2ad971da3",
-    "user_id": "165819c2-c944-4487-9f56-33a3dbb9fb75",
+    "id": "d67ec462-0c9a-453c-af38-409af405a91a",
+    "team_id": "efd24d00-3b73-443e-a407-0a712198761e",
+    "user_id": "3065f46a-bf7d-4edf-8d6d-4736591854a0",
     "patient_details": {
       "dob": "2020-01-01",
       "gender": "male"
@@ -334,7 +337,7 @@ Shipping Details. For unregistered testkit orders.
       "method": "testkit"
     },
     "sample_id": "123456789",
-    "health_insurace_id": "cf130f5a-9230-4746-9125-26a5d5e5c2ab",
+    "health_insurace_id": "2e58a49b-fee3-4ce0-85e1-19baa2a05b3b",
     "requisition_form_url": "https://www.example.com",
     "notes": "This is a note",
     "created_at": "2020-01-01T00:00:00Z",
